Improved clarity of reference resolution/linking rules my moving scope iteration to first-class AstPathIterator notion.
Clearly differentiate resolution of first ref in a chain from subsequent
dot-seperated member references.